# axeon

./: Cargo.toml  DESIGN_DOC.md  LICENSE  README.md
.github/workflows/: build.yml
doc/: README.md  ast.md  lexer.md  parser.md
include/: arm_neon.h  avx2intrin.h  avx512fintrin.h  avxintrin.h  bmi2intrin.h  emmintrin.h  fmaintrin.h  immintrin.h  mmintrin.h  nmmintrin.h  pmmintrin.h  shaintrin.h  smmintrin.h  tmmintrin.h  wmmintrin.h  x86intrin.h  xmmintrin.h
scripts/: build-all.sh  build-linux.sh  build-macos.sh  build-windows.sh
src/: lib.rs
src/backend/: README.md  common.rs
src/backend/i686/linker/: reloc.rs  shared.rs
src/common/: README.md  error.rs  temp_files.rs
src/driver/: README.md  cli.rs  external_tools.rs  file_types.rs  pipeline.rs
src/frontend/lexer/: README.md  scan.rs  token.rs
src/frontend/parser/: ast.rs  declarations.rs  statements.rs
src/frontend/preprocessor/: README.md  pipeline.rs
src/frontend/sema/: analysis.rs
src/ir/: README.md
src/ir/lowering/: expr_builtins.rs  expr_calls.rs  func_lowering.rs  lower.rs  structs.rs
src/ir/mem2reg/: promote.rs
src/passes/: README.md  div_by_const.rs  inline.rs  mod.rs
